Added new features - Show active player on UI Disable buttons on press of play again Show winning line on UI

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
       <div id="cellNine" class="box" data-row="2" data-column="2"></div>
     </div>
 
+    <div id="gameResultContainer"></div>
+    <div id="playerTurnContainer">
+      <p id="playerName"></p>
+      <p id="playerMarker"></p>
+    </div>
+
     <div id="gameFinishedButtons">
       <button type="submit" id="playAgainBtn">Play Again?</button>
       <button type="submit" id="resetGameBtn">Reset Game</button>
